--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -8,7 +8,8 @@
 <body>
     <nav>
         <a href="/">SanaripBilim</a>|
-        <a href="/">Курсы</a> |
+        <a href="/">Курсы</a>
+        <a href="/mentors/">Менторы</a> |
         <a href="/register/">Регистрация</a> |
         <a href="/login/">Вход</a>
     </nav>
