--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -50,8 +50,8 @@ nav a {
 }
 
 nav a:hover {
-    color: #f8c510;
-    border-bottom: 2px solid #f8c510;
+    color:  #00bcd4;
+    border-bottom: 2px solid  #00bcd4;
 }
 
 /* Form & Button styles */
@@ -137,7 +137,7 @@ li a:hover {
 
 /* Общие стили для footer */
 .footer {
-    background-color: #333; /* Темный фон */
+    background-color: #1e2a38;
     color: #ffffff; /* Белый текст */
     padding: 30px 0; /* Отступы для подвала */
     font-family: 'Arial', sans-serif; /* Простой и читабельный шрифт */
