--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -35,7 +35,7 @@ h1, h2 {
 /* Navigation styles */
 nav {
     background-color: #1e2a38;
-    padding: 12px 0;
+    padding: 42px 0;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -206,3 +206,92 @@ li a:hover {
 .footer-copy p {
     margin: 5px 0;
 }
+
+
+.course-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.course-card {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.6s ease;
+}
+
+.course-card.show-card {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.course-card-inner {
+  border: 1px solid #e0e0e0;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.course-card-inner:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+.course-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 0.5rem 0 0 0.5rem;
+  }
+  
+  .course-card {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.6s ease;
+  }
+  
+  .course-card.show-card {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .course-card-inner {
+    border: 1px solid #e0e0e0;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .course-card-inner:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  @media (max-width: 768px) {
+    .col-md-6 {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+  }
+  
+
+  .card img {
+    max-width: 2    50px;  /* Ограничиваем ширину изображения */
+    height: auto;      /* Сохраняем пропорции изображения */
+  }
